// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Block sagas createMissingTicketBlocks should create missing ticket blocks 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      [Function],
    ],
    "context": Array [],
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Array [
        "modern-tribe",
      ],
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 4`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Array [
        "modern-tribe",
      ],
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 5`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicketsHeaderImage should delete tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicketsHeaderImage should not delete tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas handleEventStartDateChanges should handle start time changes 1`] = `
Object {
  "@@redux-saga/IO": true,
  "TAKE": Object {
    "channel": Object {
      "close": [MockFunction],
      "name": "nodejs",
      "take": [MockFunction],
    },
  },
}
`;

exports[`Ticket Block sagas handleTicketMove should handle ticket move 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Array [
        42,
      ],
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas resetTicketsBlock should reset tickets block 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "meta",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas resetTicketsBlock should reset tickets block 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "meta": Object {
          "_tribe_ticket_capacity": "",
        },
      },
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "modern-tribe",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "modern-tribe",
      0,
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set capacity type to shared if tickets plus is active 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set ticket initial state 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set tickets initial state for new ticket 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should not sync 1`] = `
Object {
  "@@redux-saga/IO": true,
  "ALL": Array [
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
  ],
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should not sync 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": Object {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should not sync 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": Object {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should sync 1`] = `
Object {
  "@@redux-saga/IO": true,
  "ALL": Array [
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": Object {
          "format": [MockFunction],
          "isSame": [MockFunction],
          "local": [MockFunction],
        },
        "fn": [MockFunction],
      },
    },
  ],
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should sync 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": Object {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should sync 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "format": [MockFunction],
        "isSame": [MockFunction],
        "local": [MockFunction],
      },
      "minute",
    ],
    "context": Object {
      "format": [MockFunction],
      "isSame": [MockFunction],
      "local": [MockFunction],
    },
    "fn": [MockFunction],
  },
}
`;

exports[`Ticket Block sagas syncTicketSaleEndWithEventStart should sync 4`] = `
Object {
  "@@redux-saga/IO": true,
  "ALL": Array [
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDate": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDateInput": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDateMoment": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endTime": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_TIME",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endTimeInput": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_TIME_INPUT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDate": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_END_DATE",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDateInput": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_END_DATE_INPUT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endDateMoment": "2018-02-02",
          },
          "type": "@@MT/TICKETS/SET_TICKET_END_DATE_MOMENT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endTime": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_TICKET_END_TIME",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "endTimeInput": "02:00:00",
          },
          "type": "@@MT/TICKETS/SET_TICKET_END_TIME_INPUT",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "payload": Object {
            "clientId": "clientId",
            "hasChanges": true,
          },
          "type": "@@MT/TICKETS/SET_TICKET_HAS_CHANGES",
        },
        "channel": null,
      },
    },
    Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          "clientId",
        ],
        "context": null,
        "fn": [Function],
      },
    },
  ],
}
`;

exports[`Ticket Block sagas updateTicketsHeaderImage should not update tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas updateTicketsHeaderImage should update tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;
